<resources>
    <string name="app_name">Client</string>

    <!-- Measurements names -->
    <string name="measurement_timestamp">Timestamp</string>
    <string name="measurement_temperature">Temperature</string>
    <string name="measurement_humidity">Humidity</string>
    <string name="measurement_pressure">Pressure</string>
    <string name="measurement_gas">Air Quality</string>
    <string name="measurement_peopleInTheRoom">People in the room</string>
    <string name="measurement_windowsOpened">Windows opened</string>
    <string name="measurement_recommendation">Recommendation</string>

    <!-- Toolbar titles -->
    <string name="title_measurements">Measurements</string>
    <string name="title_measurements_history">Measurements history</string>
    <string name="title_settings">Settings</string>
    <string name="title_main">Menu</string>
    <string name="title_measurements_graphs">Measurements graphs</string>
    <string name="title_optimization">Optimization</string>

    <!-- Preference keys -->
    <string name="pref_key_notifications" translatable="false">notifications</string>
    <string name="pref_key_feedback" translatable="false">feedback</string>

    <!-- Preference category titles -->
    <string name="pref_notifications_header">Notifications</string>
    <string name="pref_help_header">Help</string>

    <!-- Preference titles -->
    <string name="pref_show_notifications">Show notifications</string>
    <string name="pref_send_feedback">Send feedback</string>

    <!-- Preference summaries -->
    <string name="pref_on_off_notifications">Turns notifications on/off (need to restart the application to take effect)</string>
</resources>
