<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android">
    <PreferenceCategory android:title="@string/pref_notifications_header">
        <SwitchPreference
            android:summary="@string/pref_on_off_notifications"
            android:key="@string/pref_key_notifications"
            android:title="@string/pref_show_notifications"
            android:defaultValue="@bool/pref_notifications_default_value" />
    </PreferenceCategory>

    <PreferenceCategory android:title="@string/pref_help_header">
        <EditTextPreference
            android:defaultValue="Default value"
            android:key="@string/pref_key_feedback"
            android:selectAllOnFocus="true"
            android:singleLine="true"
            android:title="@string/pref_send_feedback" />
    </PreferenceCategory>
</PreferenceScreen>
